fix some spacings

--- a/src/styles/abstracts/_tokens.scss
+++ b/src/styles/abstracts/_tokens.scss
@@ -61,7 +61,7 @@ $container-max-width-hero: 74rem;
 // site header
 $site-header-color: $color-neutral-900;
 $site-header-padding: $size-10 0;
-$site-header-padding-desktop: $size-12 0;
+$site-header-padding-desktop: $size-15 0;
 $site-header-jusitifcation-small-screens: space-between;
 $site-header-jusitifcation-large-screens: space-between;
 $site-header-alignment: center;
